<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="num_minutes_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="num_hours_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="num_days_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> day</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="week_count">
        
        <item quantity="one">a week</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="month_count">
        
        <item quantity="one">a month</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <plurals name="year_count">
        
        <item quantity="one">a year</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <plurals name="notification_send_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <plurals name="notification_download_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <plurals name="notification_new_messages">
        <item quantity="one">New message</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> new messages</item>
    </plurals>
    <plurals name="delete_conversations_confirmation_dialog_title">
        <item quantity="one">Delete this conversation?</item>
        <item quantity="other">Delete these conversations?</item>
    </plurals>
    <plurals name="wearable_participant_count">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> participant</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> participants</item>
    </plurals>
    <plurals name="attachment_preview_close_content_description">
        <item quantity="one">Discard attachment</item>
        <item quantity="other">Discard attachments</item>
    </plurals>
    <plurals name="photos_saved_to_album">
        <item quantity="one"><xliff:g id="quantity">%d</xliff:g> photo saved to \"<xliff:g id="albumName">%s</xliff:g>\" album</item>
        <item quantity="other"><xliff:g id="quantity">%d</xliff:g> photos saved to \"<xliff:g id="albumName">%s</xliff:g>\" album</item>
    </plurals>
    <plurals name="videos_saved_to_album">
        <item quantity="one"><xliff:g id="quantity">%d</xliff:g> video saved to \"<xliff:g id="albumName">%s</xliff:g>\" album</item>
        <item quantity="other"><xliff:g id="quantity">%d</xliff:g> videos saved to \"<xliff:g id="albumName">%s</xliff:g>\" album</item>
    </plurals>
    <plurals name="attachments_saved_to_album">
        <item quantity="one"><xliff:g id="quantity">%d</xliff:g> attachment saved to \"<xliff:g id="albumName">%s</xliff:g>\" album</item>
        <item quantity="other"><xliff:g id="quantity">%d</xliff:g> attachments saved to \"<xliff:g id="albumName">%s</xliff:g>\" album</item>
    </plurals>
    <plurals name="attachments_saved_to_downloads">
        <item quantity="one"><xliff:g id="quantity">%d</xliff:g> attachment saved to \"Downloads\"</item>
        <item quantity="other"><xliff:g id="quantity">%d</xliff:g> attachments saved to \"Downloads\"</item>
    </plurals>
    <plurals name="attachments_saved">
        <item quantity="one"><xliff:g id="quantity">%d</xliff:g> attachment saved</item>
        <item quantity="other"><xliff:g id="quantity">%d</xliff:g> attachments saved</item>
    </plurals>
    <plurals name="attachment_save_error">
        <item quantity="one">Couldn\'t save <xliff:g id="quantity">%d</xliff:g> attachment</item>
        <item quantity="other">Couldn\'t save <xliff:g id="quantity">%d</xliff:g> attachments</item>
    </plurals>
    <plurals name="compose_message_view_hint_text_photo">
        <item quantity="one">Send photo</item>
        <item quantity="other">Send photos</item>
    </plurals>
    <plurals name="compose_message_view_hint_text_audio">
        <item quantity="one">Send audio</item>
        <item quantity="other">Send audios</item>
    </plurals>
    <plurals name="compose_message_view_hint_text_video">
        <item quantity="one">Send video</item>
        <item quantity="other">Send videos</item>
    </plurals>
    <plurals name="compose_message_view_hint_text_vcard">
        <item quantity="one">Send contact card</item>
        <item quantity="other">Send contact cards</item>
    </plurals>
    <plurals name="compose_message_view_hint_text_attachments">
        <item quantity="one">Send attachment</item>
        <item quantity="other">Send attachments</item>
    </plurals>
    <plurals name="attachment_changed_accessibility_announcement">
        <item quantity="zero">No attachments selected</item>
        <item quantity="one">One attachment ready to send</item>
        <item quantity="other"><xliff:g id="attachment_count">%d</xliff:g> attachments ready to send</item>
    </plurals>
    <plurals name="vcard_multiple_display_name">
        
        <item quantity="one"><xliff:g id="count">%d</xliff:g> contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <plurals name="add_invalid_contact_error">
        <item quantity="one">Invalid contact</item>
        <item quantity="other">Invalid contacts</item>
    </plurals>
    <string name="app_name">Messaging</string>
    <string name="share_intent_label">Messaging</string>
    <string name="share_intent_activity_label">Select conversation</string>
    <string name="action_settings">Settings</string>
    <string name="sendButtonContentDescription">Send Message</string>
    <string name="attachMediaButtonContentDescription">Add an attachment</string>
    <string name="help_and_feedback_activity_label">Help</string>
    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="settings">Settings</string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Messaging > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="contact_picker_frequents_tab_title">Frequents</string>
    <string name="contact_picker_all_contacts_tab_title">All contacts</string>
    <string name="contact_list_send_to_text">Send to <xliff:g id="destination">%s</xliff:g></string>
    <string name="mediapicker_cameraChooserDescription">Capture pictures or video</string>
    <string name="mediapicker_galleryChooserDescription">Choose images from this device</string>
    <string name="mediapicker_audioChooserDescription">Record audio</string>
    <string name="mediapicker_gallery_title">Choose photo</string>
    <string name="mediapicker_gallery_item_selected_content_description">The media is selected.</string>
    <string name="mediapicker_gallery_item_unselected_content_description">The media is unselected.</string>
    <string name="mediapicker_locations">Location</string>
    <string name="mediapicker_gallery_title_selection"><xliff:g id="count">%d</xliff:g> selected</string>
    <string name="mediapicker_gallery_image_item_description">image <xliff:g id="date">%1$tB %1$te %1$tY %1$tl %1$tM %1$tp</xliff:g></string>
    <string name="mediapicker_gallery_image_item_description_no_date">image</string>
    <string name="mediapicker_audio_title">Record audio</string>
    <string name="action_share">Share</string>
    <string name="posted_just_now">"Just now"</string>
    <string name="posted_now">"Now"</string>
    <string name="class_0_message_activity">Class 0 message</string>
    <string name="save">Save</string>
    <string name="sms_storage_low_auto_delete_enabled_dialog_text">Device is low on space. Messaging will automatically delete older messages to free up space.</string>
    <string name="sms_storage_low_title">Storage space running out</string>
    <string name="sms_storage_low_text">Messaging might not send or receive messages until more space is available on your device.</string>
    <string name="sms_storage_low_notification_ticker">Low SMS storage. You may need to delete messages.</string>
    <string name="enter_phone_number_title">Confirm your phone number</string>
    <string name="enter_phone_number_text">This one-time step will ensure Messaging will deliver your group messages properly.</string>
    <string name="enter_phone_number_hint">Phone number</string>
    <string name="delete_all_media">Delete all messages with media</string>
    <string name="delete_oldest_messages">Delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="auto_delete_oldest_messages">Auto-delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="ignore">Ignore</string>
    <string name="delete_all_media_confirmation">Delete all messages with media?</string>
    <string name="delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g>?</string>
    <string name="auto_delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g> and turn on auto-delete?</string>
    <string name="incoming_text_sender_content_description"><xliff:g id="sender">%s</xliff:g> said</string>
    <string name="outgoing_text_sender_content_description">You said</string>
    <string name="incoming_sender_content_description">Message from <xliff:g id="sender">%s</xliff:g></string>
    <string name="outgoing_sender_content_description">You sent a message</string>
    <string name="message_status_sending">Sending&#8230;</string>
    <string name="message_status_send_failed">Not sent. Tap to try again.</string>
    <string name="message_status_send_retrying">Not sent. Trying again&#8230;</string>
    <string name="message_status_resend">Resend or delete</string>
    <string name="message_status_send_failed_emergency_number">Please make a voice call to emergency services. Your text message could not be delivered at this time.</string>
    <string name="message_status_failed">Failed</string>
    <string name="message_title_manual_download">New MMS message to download</string>
    <string name="message_title_downloading">New MMS message</string>
    <string name="message_title_download_failed">Couldn\'t download</string>
    <string name="message_status_download_failed">Tap to try again</string>
    <string name="messagefailed">发送失败</string>
    <string name="message_status_download">Tap to download</string>
    <string name="message_status_download_action">Download or delete</string>
    <string name="message_status_downloading">Downloading&#8230;</string>
    <string name="message_status_download_error">Message expired or not available</string>
    <string name="delete_subject_content_description">Delete subject</string>
    <string name="compose_message_view_subject_hint_text">Subject</string>
    <string name="mms_text">MMS</string>
</resources>